--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-common-components",
+  "name": "application-common-components",
   "version": "1.0.1",
   "description": "Common components for frontend & backend micro services",
   "author": "yehonadav",
