--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ jspm_packages
 
 .build
 /.build/
+dist
 
 .nyc_output
 
@@ -12,8 +13,6 @@ coverage
 out-logger.json
 
 .DS_Store
-
-services/common/config
 
 .webpack
 .webpackCache
